objects/Participant__c.object
<CustomObject>
    <description>patrticipants like:track speakersPanelistsAnnouncersmoderatorsetc.</description>
    <fields>
        <fullName>BLN_Participant_Role__c</fullName>
        <label>BLN Participant Role</label>
        <referenceTo>BLN_Participant_Role__c</referenceTo>
        <relationshipLabel>BLN Participants</relationshipLabel>
        <relationshipName>BLN_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_TKT_profile__c</fullName>
        <label>BLN TKT profile</label>
        <referenceTo>Tkt_profile__c</referenceTo>
        <relationshipLabel>BLN Participants</relationshipLabel>
        <relationshipName>BLN_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Role__c</fullName>
        <label>Del Participant Role</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panelist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Slot__c</fullName>
        <label>Time Slot</label>
        <referenceTo>Time_Slots__c</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Participant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BLN_TKT_profile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patrticipant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>